--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,10 @@ nav {
     /* padding: 20px 15px; */
 }
 
+main {
+    padding: 36px;
+}
+
 .nav--items {
     display: flex;
     align-items: center;
@@ -56,4 +60,44 @@ nav {
     letter-spacing: 0em;
     text-align: right;
     color: #FFFFFF;
+}
+
+.meme--form {
+    display: grid;
+    grid-template: 40px 40px / 1fr 1fr;
+    gap: 15px;
+    align-content: center;
+}
+
+.form--input {
+    width: 235px;
+    height: Hug (34.74px);
+    text-indent: 5px;
+    top: 20.27px;
+    padding: 7.37px, 10.64px, 7.37px, 10.64px;
+    border-radius: 4.91px;
+    border: 0.82px;
+    gap: 6.55px;
+    background: linear-gradient(0deg, #D1D5DB, #D1D5DB),linear-gradient(0deg, #FFFFFF, #FFFFFF);
+    border: 0.82px solid #D1D5DB;
+    box-shadow: 0px 0.8187389969825745px 1.637477993965149px 0px #0000000D;
+}
+
+.form--button {
+    grid-column: 1 / -1;
+    text-align: center;
+    width: 477px;
+    height: 40px;
+    top: 163px;
+    left: 37px;
+    border-radius: 5px;
+    background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+    color: white;
+    font-family: Karla;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 19px;
+    letter-spacing: -0.1em;
+    cursor: pointer;
+    
 }
